# trying_teemi

./: dummy.py  notebook1.ipynb  output.tsv  pyproject.toml  readme.md  requirements.txt  script1.py  script2.py  todo.txt
